[gd_scene load_steps=4 format=3 uid="uid://gscdgtvcxckg"]

[ext_resource type="Script" path="res://Mozu/Scripts/Menu.gd" id="1_4n0d2"]
[ext_resource type="Texture2D" uid="uid://c4543wowwkpgu" path="res://Mozu/Sprites/MenuMosu.png" id="1_aueg2"]
[ext_resource type="FontFile" uid="uid://uc6pmktvy2a5" path="res://PapersPleaseClone/Fonte/MP16REG.ttf" id="2_ub5do"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4n0d2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 512.0
offset_bottom = 288.0
texture = ExtResource("1_aueg2")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -179.0
offset_right = 69.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0

[node name="Iniciar" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.439216, 0.305882, 1)
theme_override_colors/font_hover_color = Color(0.117647, 0.439216, 0.305882, 1)
theme_override_fonts/font = ExtResource("2_ub5do")
text = "INICIAR"

[node name="Tutorial" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.439216, 0.305882, 1)
theme_override_colors/font_hover_color = Color(0.117647, 0.439216, 0.305882, 1)
theme_override_fonts/font = ExtResource("2_ub5do")
text = "TUTORiAL"

[node name="Menu Principal" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.439216, 0.305882, 1)
theme_override_colors/font_hover_color = Color(0.117647, 0.439216, 0.305882, 1)
theme_override_fonts/font = ExtResource("2_ub5do")
text = "MENU"

[connection signal="button_down" from="HBoxContainer/Iniciar" to="." method="_on_iniciar_button_down"]
[connection signal="button_down" from="HBoxContainer/Tutorial" to="." method="_on_tutorial_button_down"]
[connection signal="button_down" from="HBoxContainer/Menu Principal" to="." method="_on_menu_principal_button_down"]
